Add ESLint and TSConfig rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,18 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    // My config
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
