--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -23,6 +21,11 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.8.0"
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "13.4.6",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-tsdoc": "^0.2.17"
   }
 }
